# home-search

./: .gitignore  README.md  index.html  properties.csv  property-scrapper.py  pyproject.toml  scraper.py  todo.md  urls.txt
